src/main/java/parser/parsing/BSParser.java
/* BSParser.java */
/* Generated By:JavaCC: Do not edit this line. BSParser.java */
package parser.parsing;

import parser.ast.AllowedArguments;
import parser.ast.AllowedArgumentsRest;
import parser.ast.AndExpression;
import parser.ast.ArgumentList;
import parser.ast.AssignmentInstruction;
import parser.ast.BSProgram;
import parser.ast.BranchStatement;
import parser.ast.DetectStatement;
import parser.ast.DrainStatement;
import parser.ast.ElseBranchStatement;
import parser.ast.ElseIfBranchStatement;
import parser.ast.EqualityExpression;
import parser.ast.Expression;
import parser.ast.FalseLiteral;
import parser.ast.FormalParameter;
import parser.ast.FormalParameterList;
import parser.ast.FormalParameterRest;
import parser.ast.FunctionDefinition;
import parser.ast.FunctionInvoke;
import parser.ast.GreaterThanEqualExpression;
import parser.ast.GreaterThanExpression;
import parser.ast.HeatStatement;
import parser.ast.Identifier;
import parser.ast.InstructionAssignment;
import parser.ast.IntegerLiteral;
import parser.ast.LessThanEqualExpression;
import parser.ast.LessThanExpression;
import parser.ast.Manifest;
import parser.ast.MatLiteral;
import parser.ast.MinusExpression;
import parser.ast.MixStatement;
import parser.ast.Module;
import parser.ast.NatLiteral;
import parser.ast.NodeChoice;
import parser.ast.NodeList;
import parser.ast.NodeListOptional;
import parser.ast.NodeOptional;
import parser.ast.NodeSequence;
import parser.ast.NodeToken;
import parser.ast.NotEqualExpression;
import parser.ast.NotExpression;
import parser.ast.OrExpression;
import parser.ast.ParenthesisExpression;
import parser.ast.PlusExpression;
import parser.ast.PrimaryExpression;
import parser.ast.Primitives;
import parser.ast.RealLiteral;
import parser.ast.RepeatStatement;
import parser.ast.SplitStatement;
import parser.ast.Statements;
import parser.ast.Stationary;
import parser.ast.TimesExpression;
import parser.ast.TrueLiteral;
import parser.ast.Type;
import parser.ast.TypingList;
import parser.ast.TypingRest;


public class BSParser implements BSParserConstants {

    static private int[] jj_la1_0;
    static private int[] jj_la1_1;

    static {
        jj_la1_init_0();
        jj_la1_init_1();
    }

    final private int[] jj_la1 = new int[33];
    final private JJCalls[] jj_2_rtns = new JJCalls[15];
    final private LookaheadSuccess jj_ls = new LookaheadSuccess();
    /**
     * Generated Token Manager.
     */
    public BSParserTokenManager token_source;
    /**
     * Current token.
     */
    public Token token;
    /**
     * Next token.
     */
    public Token jj_nt;
    JavaCharStream jj_input_stream;
    private int jj_ntk;
    private Token jj_scanpos, jj_lastpos;
    private int jj_la;
    private int jj_gen;
    private boolean jj_rescan = false;
    private int jj_gc = 0;
    private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
    private int[] jj_expentry;
    private int jj_kind = -1;
    private int[] jj_lasttokens = new int[100];
    private int jj_endpos;

    /**
     * Constructor with InputStream.
     */
    public BSParser(java.io.InputStream stream) {
        this(stream, null);
    }

    /**
     * Constructor with InputStream and supplied encoding
     */
    public BSParser(java.io.InputStream stream, String encoding) {
        try {
            jj_input_stream = new JavaCharStream(stream, encoding, 1, 1);
        } catch (java.io.UnsupportedEncodingException e) {
            throw new RuntimeException(e);
        }
        token_source = new BSParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 33; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor.
     */
    public BSParser(java.io.Reader stream) {
        jj_input_stream = new JavaCharStream(stream, 1, 1);
        token_source = new BSParserTokenManager(jj_input_stream);
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 33; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    /**
     * Constructor with generated Token Manager.
     */
    public BSParser(BSParserTokenManager tm) {
        token_source = tm;
        token = new Token();
        jj_ntk = -1;
        jj_gen = 0;
        for (int i = 0; i < 33; i++) jj_la1[i] = -1;
        for (int i = 0; i < jj_2_rtns.length; i++) jj_2_rtns[i] = new JJCalls();
    }

    private static void jj_la1_init_0() {
        jj_la1_0 = new int[]{0x8000000, 0x20000, 0x40000, 0x800000, 0x7006300, 0x7000000, 0x7000000, 0x7000000, 0x0, 0x7006300, 0x20000000, 0x6300, 0x7000000, 0x0, 0x3000000, 0x0, 0x7000000, 0x400, 0x400, 0x400, 0x7006300, 0x7006300, 0x8000, 0x10000, 0x7006300, 0x7006300, 0x10c0, 0x1000000, 0x0, 0x10c0, 0x0, 0x1000000, 0x1000000,};
    }

    private static void jj_la1_init_1() {
        jj_la1_1 = new int[]{0x0, 0x0, 0x0, 0x0, 0x2000000, 0x0, 0x0, 0x2000000, 0x800000, 0x2000000, 0x0, 0x2000000, 0x0, 0x400000, 0x0, 0x400000, 0x0, 0x0, 0x0, 0x0, 0x2000000, 0x2000000, 0x0, 0x0, 0x2000000, 0x2000000, 0x3300001, 0x3300000, 0x400000, 0x2000000, 0x1300001, 0x3300000, 0x1300000,};
    }

    final public BSProgram BSProgram() throws ParseException {
        NodeListOptional n0 = new NodeListOptional();
        Module n1;
        NodeListOptional n2 = new NodeListOptional();
        Stationary n3;
        NodeList n4 = new NodeList();
        Manifest n5;
        NodeToken n6;
        Token n7;
        NodeListOptional n8 = new NodeListOptional();
        FunctionDefinition n9;
        NodeToken n10;
        Token n11;
        NodeList n12 = new NodeList();
        Statements n13;
        NodeToken n14;
        Token n15;
        label_1:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case MODULE: {
                    break;
                }
                default:
                    jj_la1[0] = jj_gen;
                    break label_1;
            }
            n1 = Module();
            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        label_2:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case STATIONARY: {
                    break;
                }
                default:
                    jj_la1[1] = jj_gen;
                    break label_2;
            }
            n3 = Stationary();
            n2.addNode(n3);
        }
        n2.nodes.trimToSize();
        label_3:
        while (true) {
            n5 = Manifest();
            n4.addNode(n5);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case MANIFEST: {
                    break;
                }
                default:
                    jj_la1[2] = jj_gen;
                    break label_3;
            }
        }
        n4.nodes.trimToSize();
        n7 = jj_consume_token(FUNCTIONS);
        n6 = JTBToolkit.makeNodeToken(n7);
        label_4:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case FUNCTION: {
                    break;
                }
                default:
                    jj_la1[3] = jj_gen;
                    break label_4;
            }
            n9 = FunctionDefinition();
            n8.addNode(n9);
        }
        n8.nodes.trimToSize();
        n11 = jj_consume_token(INSTRUCTIONS);
        n10 = JTBToolkit.makeNodeToken(n11);
        label_5:
        while (true) {
            n13 = Statements();
            n12.addNode(n13);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case DRAIN:
                case HEAT:
                case REPEAT:
                case IF:
                case REAL:
                case NAT:
                case MAT:
                case IDENTIFIER: {
                    break;
                }
                default:
                    jj_la1[4] = jj_gen;
                    break label_5;
            }
        }
        n12.nodes.trimToSize();
        n15 = jj_consume_token(0);
        n15.beginColumn++;
        n15.endColumn++;
        n14 = JTBToolkit.makeNodeToken(n15);
        {
            if ("" != null) return new BSProgram(n0, n2, n4, n6, n8, n10, n12, n14);
        }
        throw new Error("Missing return statement in function");
    }

    final public Module Module() throws ParseException {
        NodeToken n0;
        Token n1;
        Identifier n2;
        n1 = jj_consume_token(MODULE);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = Identifier();
        {
            if ("" != null) return new Module(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public Stationary Stationary() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeOptional n2 = new NodeOptional();
        TypingList n3;
        PrimaryExpression n4;
        n1 = jj_consume_token(STATIONARY);
        n0 = JTBToolkit.makeNodeToken(n1);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case REAL:
            case NAT:
            case MAT: {
                n3 = TypingList();
                n2.addNode(n3);
                break;
            }
            default:
                jj_la1[5] = jj_gen;
        }
        n4 = PrimaryExpression();
        {
            if ("" != null) return new Stationary(n0, n2, n4);
        }
        throw new Error("Missing return statement in function");
    }

    final public Manifest Manifest() throws ParseException {
        NodeToken n0;
        Token n1;
        NodeOptional n2 = new NodeOptional();
        TypingList n3;
        PrimaryExpression n4;
        n1 = jj_consume_token(MANIFEST);
        n0 = JTBToolkit.makeNodeToken(n1);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case REAL:
            case NAT:
            case MAT: {
                n3 = TypingList();
                n2.addNode(n3);
                break;
            }
            default:
                jj_la1[6] = jj_gen;
        }
        n4 = PrimaryExpression();
        {
            if ("" != null) return new Manifest(n0, n2, n4);
        }
        throw new Error("Missing return statement in function");
    }

    final public FunctionDefinition FunctionDefinition() throws ParseException {
        NodeToken n0;
        Token n1;
        Identifier n2;
        NodeToken n3;
        Token n4;
        NodeListOptional n5 = new NodeListOptional();
        FormalParameterList n6;
        NodeToken n7;
        Token n8;
        NodeOptional n9 = new NodeOptional();
        NodeSequence n10;
        NodeToken n11;
        Token n12;
        TypingList n13;
        NodeToken n14;
        Token n15;
        NodeList n16 = new NodeList();
        Statements n17;
        NodeOptional n18 = new NodeOptional();
        NodeSequence n19;
        NodeToken n20;
        Token n21;
        Expression n22;
        NodeToken n23;
        Token n24;
        n1 = jj_consume_token(FUNCTION);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = Identifier();
        n4 = jj_consume_token(LPAREN);
        n3 = JTBToolkit.makeNodeToken(n4);
        label_6:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case REAL:
                case NAT:
                case MAT:
                case IDENTIFIER: {
                    break;
                }
                default:
                    jj_la1[7] = jj_gen;
                    break label_6;
            }
            n6 = FormalParameterList();
            n5.addNode(n6);
        }
        n5.nodes.trimToSize();
        n8 = jj_consume_token(RPAREN);
        n7 = JTBToolkit.makeNodeToken(n8);
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case COLON: {
                n10 = new NodeSequence(2);
                n12 = jj_consume_token(COLON);
                n11 = JTBToolkit.makeNodeToken(n12);
                n10.addNode(n11);
                n13 = TypingList();
                n10.addNode(n13);
                n9.addNode(n10);
                break;
            }
            default:
                jj_la1[8] = jj_gen;
        }
        n15 = jj_consume_token(LBRACE);
        n14 = JTBToolkit.makeNodeToken(n15);
        label_7:
        while (true) {
            n17 = Statements();
            n16.addNode(n17);
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case DRAIN:
                case HEAT:
                case REPEAT:
                case IF:
                case REAL:
                case NAT:
                case MAT:
                case IDENTIFIER: {
                    break;
                }
                default:
                    jj_la1[9] = jj_gen;
                    break label_7;
            }
        }
        n16.nodes.trimToSize();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case RETURN: {
                n19 = new NodeSequence(2);
                n21 = jj_consume_token(RETURN);
                n20 = JTBToolkit.makeNodeToken(n21);
                n19.addNode(n20);
                n22 = Expression();
                n19.addNode(n22);
                n18.addNode(n19);
                break;
            }
            default:
                jj_la1[10] = jj_gen;
        }
        n24 = jj_consume_token(RBRACE);
        n23 = JTBToolkit.makeNodeToken(n24);
        {
            if ("" != null)
                return new FunctionDefinition(n0, n2, n3, n5, n7, n9, n14, n16, n18, n23);
        }
        throw new Error("Missing return statement in function");
    }

    final public Statements Statements() throws ParseException {
        NodeChoice n0;
        AssignmentInstruction n1;
        BranchStatement n2;
        RepeatStatement n3;
        HeatStatement n4;
        DrainStatement n5;
        FunctionInvoke n6;
        if (jj_2_1(2147483647)) {
            n1 = AssignmentInstruction();
            n0 = new NodeChoice(n1, 0);
        } else {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case IF: {
                    n2 = BranchStatement();
                    n0 = new NodeChoice(n2, 1);
                    break;
                }
                case REPEAT: {
                    n3 = RepeatStatement();
                    n0 = new NodeChoice(n3, 2);
                    break;
                }
                case HEAT: {
                    n4 = HeatStatement();
                    n0 = new NodeChoice(n4, 3);
                    break;
                }
                case DRAIN: {
                    n5 = DrainStatement();
                    n0 = new NodeChoice(n5, 4);
                    break;
                }
                case IDENTIFIER: {
                    n6 = FunctionInvoke();
                    n0 = new NodeChoice(n6, 5);
                    break;
                }
                default:
                    jj_la1[11] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if ("" != null) return new Statements(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public AssignmentInstruction AssignmentInstruction() throws ParseException {
        NodeListOptional n0 = new NodeListOptional();
        TypingList n1;
        Identifier n2;
        NodeToken n3;
        Token n4;
        Expression n5;
        label_8:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case REAL:
                case NAT:
                case MAT: {
                    break;
                }
                default:
                    jj_la1[12] = jj_gen;
                    break label_8;
            }
            n1 = TypingList();
            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        n2 = Identifier();
        n4 = jj_consume_token(ASSIGN);
        n3 = JTBToolkit.makeNodeToken(n4);
        n5 = Expression();
        {
            if ("" != null) return new AssignmentInstruction(n0, n2, n3, n5);
        }
        throw new Error("Missing return statement in function");
    }

    final public TypingList TypingList() throws ParseException {
        Type n0;
        NodeListOptional n1 = new NodeListOptional();
        TypingRest n2;
        n0 = Type();
        label_9:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case COMMA: {
                    break;
                }
                default:
                    jj_la1[13] = jj_gen;
                    break label_9;
            }
            n2 = TypingRest();
            n1.addNode(n2);
        }
        n1.nodes.trimToSize();
        {
            if ("" != null) return new TypingList(n0, n1);
        }
        throw new Error("Missing return statement in function");
    }

    final public Type Type() throws ParseException {
        NodeChoice n0;
        MatLiteral n1;
        NatLiteral n2;
        RealLiteral n3;
        if (jj_2_2(3)) {
            n1 = MatLiteral();
            n0 = new NodeChoice(n1, 0);
        } else {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case NAT: {
                    n2 = NatLiteral();
                    n0 = new NodeChoice(n2, 1);
                    break;
                }
                case REAL: {
                    n3 = RealLiteral();
                    n0 = new NodeChoice(n3, 2);
                    break;
                }
                default:
                    jj_la1[14] = jj_gen;
                    jj_consume_token(-1);
                    throw new ParseException();
            }
        }
        {
            if ("" != null) return new Type(n0);
        }
        throw new Error("Missing return statement in function");
    }

    final public TypingRest TypingRest() throws ParseException {
        NodeToken n0;
        Token n1;
        Type n2;
        n1 = jj_consume_token(COMMA);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = Type();
        {
            if ("" != null) return new TypingRest(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public FormalParameterList FormalParameterList() throws ParseException {
        FormalParameter n0;
        NodeListOptional n1 = new NodeListOptional();
        FormalParameterRest n2;
        n0 = FormalParameter();
        label_10:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case COMMA: {
                    break;
                }
                default:
                    jj_la1[15] = jj_gen;
                    break label_10;
            }
            n2 = FormalParameterRest();
            n1.addNode(n2);
        }
        n1.nodes.trimToSize();
        {
            if ("" != null) return new FormalParameterList(n0, n1);
        }
        throw new Error("Missing return statement in function");
    }

    final public FormalParameter FormalParameter() throws ParseException {
        NodeListOptional n0 = new NodeListOptional();
        TypingList n1;
        Identifier n2;
        label_11:
        while (true) {
            switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
                case REAL:
                case NAT:
                case MAT: {
                    break;
                }
                default:
                    jj_la1[16] = jj_gen;
                    break label_11;
            }
            n1 = TypingList();
            n0.addNode(n1);
        }
        n0.nodes.trimToSize();
        n2 = Identifier();
        {
            if ("" != null) return new FormalParameter(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public FormalParameterRest FormalParameterRest() throws ParseException {
        NodeToken n0;
        Token n1;
        FormalParameter n2;
        n1 = jj_consume_token(COMMA);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = FormalParameter();
        {
            if ("" != null) return new FormalParameterRest(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public MixStatement MixStatement() throws ParseException {
        NodeToken n0;
        Token n1;
        PrimaryExpression n2;
        NodeToken n3;
        Token n4;
        PrimaryExpression n5;
        NodeOptional n6 = new NodeOptional();
        NodeSequence n7;
        NodeToken n8;
        Token n9;
        IntegerLiteral n10;
        n1 = jj_consume_token(MIX);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = PrimaryExpression();
        n4 = jj_consume_token(WITH);
        n3 = JTBToolkit.makeNodeToken(n4);
        n5 = PrimaryExpression();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case FOR: {
                n7 = new NodeSequence(2);
                n9 = jj_consume_token(FOR);
                n8 = JTBToolkit.makeNodeToken(n9);
                n7.addNode(n8);
                n10 = IntegerLiteral();
                n7.addNode(n10);
                n6.addNode(n7);
                break;
            }
            default:
                jj_la1[17] = jj_gen;
        }
        {
            if ("" != null) return new MixStatement(n0, n2, n3, n5, n6);
        }
        throw new Error("Missing return statement in function");
    }

    final public SplitStatement SplitStatement() throws ParseException {
        NodeToken n0;
        Token n1;
        PrimaryExpression n2;
        NodeToken n3;
        Token n4;
        IntegerLiteral n5;
        n1 = jj_consume_token(SPLIT);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = PrimaryExpression();
        n4 = jj_consume_token(INTO);
        n3 = JTBToolkit.makeNodeToken(n4);
        n5 = IntegerLiteral();
        {
            if ("" != null) return new SplitStatement(n0, n2, n3, n5);
        }
        throw new Error("Missing return statement in function");
    }

    final public DrainStatement DrainStatement() throws ParseException {
        NodeToken n0;
        Token n1;
        PrimaryExpression n2;
        n1 = jj_consume_token(DRAIN);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = PrimaryExpression();
        {
            if ("" != null) return new DrainStatement(n0, n2);
        }
        throw new Error("Missing return statement in function");
    }

    final public HeatStatement HeatStatement() throws ParseException {
        NodeToken n0;
        Token n1;
        PrimaryExpression n2;
        NodeToken n3;
        Token n4;
        IntegerLiteral n5;
        NodeOptional n6 = new NodeOptional();
        NodeSequence n7;
        NodeToken n8;
        Token n9;
        IntegerLiteral n10;
        n1 = jj_consume_token(HEAT);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = PrimaryExpression();
        n4 = jj_consume_token(AT);
        n3 = JTBToolkit.makeNodeToken(n4);
        n5 = IntegerLiteral();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case FOR: {
                n7 = new NodeSequence(2);
                n9 = jj_consume_token(FOR);
                n8 = JTBToolkit.makeNodeToken(n9);
                n7.addNode(n8);
                n10 = IntegerLiteral();
                n7.addNode(n10);
                n6.addNode(n7);
                break;
            }
            default:
                jj_la1[18] = jj_gen;
        }
        {
            if ("" != null) return new HeatStatement(n0, n2, n3, n5, n6);
        }
        throw new Error("Missing return statement in function");
    }

    final public DetectStatement DetectStatement() throws ParseException {
        NodeToken n0;
        Token n1;
        PrimaryExpression n2;
        NodeToken n3;
        Token n4;
        PrimaryExpression n5;
        NodeOptional n6 = new NodeOptional();
        NodeSequence n7;
        NodeToken n8;
        Token n9;
        IntegerLiteral n10;
        n1 = jj_consume_token(DETECT);
        n0 = JTBToolkit.makeNodeToken(n1);
        n2 = PrimaryExpression();
        n4 = jj_consume_token(ON);
        n3 = JTBToolkit.makeNodeToken(n4);
        n5 = PrimaryExpression();
        switch ((jj_ntk == -1) ? jj_ntk_f() : jj_ntk) {
            case FOR: {
                n7 = new NodeSequence(2);
                n9 = jj_consume_token(FOR);
                n8 = JTBToolkit.makeNodeToken(n9);
                n7.addNode(n8);
                n10 = IntegerLiteral();
                n7.addNode(n10);
                n6.addNode(n7);
                break;
            }
            default:
                jj_la1[19] = jj_gen;
        }
        {
            if ("" != null) return new DetectStatement(n0, n2, n3, n5, n6);
        }
        throw new Error("Missing return statement in function");
    }
